<resources>
    <string name="app_name">Turisty</string>
    <string name="title_activity_maps">Map</string>
    <string name="limpiar">Limpiar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="list_empty">Lista eliminada exitosamente</string>
    <string name="lugar">Lugar</string>
    <string name="qu_hay_ah">¿Qué hay ahí?</string>
    <string name="descripci_n">Descripción</string>
    <string name="warning_empty">Campos vacíos</string>
    <string name="eliminar">Eliminar</string>
    <string name="a_d_nde_vamos">¿A dónde vamos?</string>
    <string name="direcci_n">Dirección</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>