<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.adrian.zarza.turisty.placeDetail.PlaceDetailViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".taskDetail.TaskDetailFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_d_nde_vamos"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="354dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/lugar"
        android:text="@={viewModel.placeTitleWord}"
        app:layout_constraintEnd_toEndOf="@+id/textview_second"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="@+id/textview_second"
        app:layout_constraintTop_toBottomOf="@+id/textview_second"
        app:setPlaceTitleText="@{viewModel.place}" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/qu_hay_ah"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textview_second"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        setPlaceDescriptionText="@{viewModel.place}"
        android:layout_width="354dp"
        android:layout_height="91dp"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:hint="@string/descripci_n"
        android:text="@={viewModel.placeDescriptionWord}"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/adres_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/direcci_n"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/address_item_text_view"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@={viewModel.placeAddressWord}"
        android:textSize="16sp"
        setAddressText="@{viewModel.place}"
        app:layout_constraintEnd_toEndOf="@+id/adres_text_view"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/adres_text_view"
        app:layout_constraintTop_toBottomOf="@+id/adres_text_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_done_edit"
        android:onClick="@{() ->viewModel.onUpdatePlace()}"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>